# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.229 2005/04/20 21:14:35 wolf31o2 Exp $

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/rc-update.sh:
  Updated rc-update.sh with better defaults for different livecd/type settings
  and cleaning up file copying in livecd-stage2-controller.sh to match
  catalyst 1.1.9.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> README:
  Made example of catalyst.conf in README match the default catalyst.conf
  provided.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> -NOTES, README,
  -REMARKS, -TODO:
  Removing old files from previous maintainers and updating README.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage2_target.py, targets/support/livecdfs-update.sh:
  Added livecd/users option to create non-root users. The first user listed
  will also be used for auto-starting X, if X is merged onto the CD.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/livecdfs-update.sh:
  Updated all instances of livecd/type: gentoo-release-environmental to
  gentoo-release-livecd and added generic-livecd.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/fsscript.sh.example, examples/gamecd.conf.example,
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/snapshot_template.spec:
  Imported example files from catalyst 1.1.9 to make them more verbose.

  18 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  Fix grp/use bug #89365

  15 Apr 2005; Eric Edgar <rocket@gentoo.org>